fix spacing

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -24,7 +24,7 @@ body{
 main{ width:100%; display:flex; flex-direction:column; align-items:center; }
 
 /* Header */
-header{ margin-top:1.3rem; text-align:center; }
+header{  margin-top:1.3rem; text-align:center; }
 h1{ font-size:2rem; font-weight:700; }
 h2{ font-size:1.1rem; color:#475569; margin-top:0.25rem; }
 h3{ font-size:.95rem; color:#64748b; margin-top:0.3rem; }
@@ -37,7 +37,7 @@ h3{ font-size:.95rem; color:#64748b; margin-top:0.3rem; }
   width:621px;
   height:621px;
   margin:0.5rem auto 2rem auto;
-  top: -10px;
+  top: -30px;
 }
 
 /* Center image */
@@ -165,6 +165,7 @@ footer{
   .center-image{ width:173px; height:173px; }
   .orbit-image{ width:107px; height:107px; }
   body{ justify-content:center; padding-bottom: 70px; }
+  header{margin-bottom: 1.5rem; margin-top: 0;}
   main{ padding-bottom:70px; }
   footer { height: 70px; }
 }
